--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>mysticoverlord</groupId>
   <artifactId>mysticoverbot</artifactId>
-  <version>1.5.5</version>
+  <version>2.3.0</version>
   <packaging>jar</packaging>
 
   <name>mysticoverbot</name>
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
 
   <dependencies>
